objects/Project_Costing__c.object
<CustomObject>
    <fields>
        <fullName>Ble__c</fullName>
        <formula>Net_Sales_Price__c / Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Sales Rate Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blended_Sales_Rate_Per_Day__c</fullName>
        <formula>Net_Sales_Price__c /  Total_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blended Sales Rate Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Architect__c</fullName>
        <label>Max Architect</label>
        <summarizedField>Costing__c.Architect__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Construct__c</fullName>
        <label>Max Construct</label>
        <summarizedField>Costing__c.Construct__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Deploy__c</fullName>
        <label>Max Deploy</label>
        <summarizedField>Costing__c.Deploy__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Support__c</fullName>
        <label>Max Support</label>
        <summarizedField>Costing__c.Support__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Validate__c</fullName>
        <label>Max Validate</label>
        <summarizedField>Costing__c.Validate__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Cost_Price__c</fullName>
        <label>Net Cost Price</label>
        <summarizedField>Costing__c.Total_Cost_Price__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Price__c</fullName>
        <label>Net Sales Price</label>
        <summarizedField>Costing__c.Total_Sales_Price__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_records__c</fullName>
        <label>No. of records</label>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Project Costings</relationshipLabel>
        <relationshipName>Project_Costings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synced Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Price__c</fullName>
        <label>Total Cost Price</label>
        <summarizedField>Costing__c.Cost__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <label>Total Days</label>
        <summarizedField>Costing__c.Total_Days__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Costing__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <formula>( Total_Sales_Rate__c - Total_Cost_Price__c )/ Total_Sales_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Months__c</fullName>
        <formula>( Max_Architect__c + Max_Construct__c + Max_Deploy__c + Max_Support__c + Max_Validate__c ) / 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Rate__c</fullName>
        <label>Total Sales Rate</label>
        <summarizedField>Costing__c.Sales_Rate__c</summarizedField>
        <summaryForeignKey>Costing__c.Project_Costing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Weeks__c</fullName>
        <formula>( Max_Architect__c + Max_Construct__c + Max_Deploy__c + Max_Support__c + Max_Validate__c ) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Weeks</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Project Costing</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Costings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>